--- a/Makefile.amigaos4
+++ b/Makefile.amigaos4
@@ -46,6 +46,8 @@ SOURCES = \
 	./src/misc/amigaos4/*.c \
 	./src/render/*.c \
 	./src/power/*.c \
+	./src/process/*.c \
+	./src/process/amigaos4/*.c \
 	./src/render/amigaos4/*.c \
 	./src/render/opengl/*.c \
 	./src/render/opengles2/*.c \
