--- a/test/Makefile.amigaos4
+++ b/test/Makefile.amigaos4
@@ -14,6 +14,7 @@ TARGETS = \
 	loopwave \
 	sdl3benchmark \
 	testatomic \
+	testaudio \
 	testaudiohotplug \
 	testaudioinfo \
 	testaudiorecording \
@@ -102,6 +103,9 @@ sdl3benchmark: sdl3benchmark.o
 	$(CC) -o $@ $^ $(LIBS)
 
 testresample: testresample.o
+	$(CC) -o $@ $^ $(LIBS)
+
+testaudio: testaudio.o testutils.o
 	$(CC) -o $@ $^ $(LIBS)
 
 testaudioinfo: testaudioinfo.o
