--- a/Makefile.amigaos4
+++ b/Makefile.amigaos4
@@ -34,6 +34,7 @@ SOURCES = \
 	./src/loadso/amigaos4/*.c \
 	./src/locale/*.c \
 	./src/locale/amigaos4/*.c \
+	./src/main/amigaos4/SDL_os4debug.c \
 	./src/misc/*.c \
 	./src/misc/amigaos4/*.c \
 	./src/render/*.c \
@@ -62,6 +63,7 @@ OBJECTS = $(shell echo $(SOURCES) | sed -e 's,\.c,\.o,g')
 TESTLIB_OBJECTS = $(shell echo $(TESTLIB_SOURCES) | sed -e 's,\.c,\.o,g')
 VERSION_OBJECT = src/main/amigaos4/SDL_os4version.o
 PREFS_OBJECT = amiga-extra/prefs.o
+DEBUG_OBJECT = src/main/amigaos4/SDL_os4debug.o
 ALL_OBJECTS = $(OBJECTS) $(TESTLIB_OBJECTS) $(VERSION_OBJECT) $(PREFS_OBJECT)
 DEPS = $(ALL_OBJECTS:.o=.d)
 
@@ -89,10 +91,12 @@ $(TARGET_SHARED): $(OBJECTS) $(VERSION_OBJECT)
 	@echo Linking $@
 	@$(CC) -shared -Wl,-soname,$(TARGET_SHARED) -o $(TARGET_SHARED) $(OBJECTS) $(VERSION_OBJECT)
 
-$(PREFS_PROGRAM): $(PREFS_OBJECT)
+$(PREFS_PROGRAM): $(PREFS_OBJECT) $(DEBUG_OBJECT)
 	$(CC) -o $@ $^
 
 $(PREFS_OBJECT): amiga-extra/prefs.c amiga-extra/sdl2prefs_strings.h
+
+$(DEBUG_OBJECT): src/main/amigaos4/SDL_os4debug.c
 
 clean:
 	@echo Cleaning
