--- a/Makefile.amigaos4
+++ b/Makefile.amigaos4
@@ -42,8 +42,10 @@ SOURCES = \
 	./src/loadso/amigaos4/*.c \
 	./src/locale/*.c \
 	./src/locale/amigaos4/*.c \
+	./src/main/amigaos4/SDL_os4debug.c \
 	./src/main/generic/SDL_sysmain_callbacks.c \
 	./src/main/SDL_main_callbacks.c \
+	./src/main/SDL_runapp.c \
 	./src/misc/*.c \
 	./src/misc/amigaos4/*.c \
 	./src/render/*.c \
@@ -78,6 +80,7 @@ OBJECTS = $(shell echo $(SOURCES) | sed -e 's,\.c,\.o,g')
 TESTLIB_OBJECTS = $(shell echo $(TESTLIB_SOURCES) | sed -e 's,\.c,\.o,g')
 VERSION_OBJECT = src/main/amigaos4/SDL_os4version.o
 PREFS_OBJECT = amiga-extra/prefs.o
+DEBUG_OBJECT = src/main/amigaos4/SDL_os4debug.o
 ALL_OBJECTS = $(OBJECTS) $(TESTLIB_OBJECTS) $(VERSION_OBJECT) $(PREFS_OBJECT)
 DEPS = $(ALL_OBJECTS:.o=.d)
 
@@ -111,10 +114,12 @@ $(TARGET_SHARED): $(OBJECTS) $(VERSION_OBJECT)
 	@echo Linking $@
 	@$(CC) -mcrt=$(CRT) -shared -Wl,-soname,$(TARGET_SHARED) -o $(TARGET_SHARED) $(OBJECTS) $(VERSION_OBJECT)
 	
-$(PREFS_PROGRAM): $(PREFS_OBJECT)
+$(PREFS_PROGRAM): $(PREFS_OBJECT) $(DEBUG_OBJECT)
 	$(CC) -o $@ $^
 
 $(PREFS_OBJECT): amiga-extra/prefs.c $(LOCALE_GENERATED)
+
+$(DEBUG_OBJECT): src/main/amigaos4/SDL_os4debug.c
 
 $(LOCALE_GENERATED): $(LOCALE_DESCRIPTOR)
 	$(CATCOMP) $(LOCALE_DESCRIPTOR) CFILE $@
