--- a/test/Makefile.amigaos4
+++ b/test/Makefile.amigaos4
@@ -1,7 +1,7 @@
 # Makefile to build the AmigaOS4 SDL tests
 
-CC		= ppc-amigaos-gcc
-CFLAGS	= -gstabs -O2 -Wall -g -I../include -DHAVE_OPENGL
+CC	= ppc-amigaos-gcc
+CFLAGS	= -gstabs -O2 -Wall -I../include -DHAVE_OPENGL
 LIBS	= -L.. -use-dynld -lSDL2_test -lSDL2 -athread=native
 
 SRC_FILES = $(wildcard *.c)
