--- a/test/Makefile.amigaos4
+++ b/test/Makefile.amigaos4
@@ -1,8 +1,9 @@
 # Makefile to build the AmigaOS4 SDL tests
 
 CC     = ppc-amigaos-gcc
-CFLAGS = -gstabs -O2 -Wall -I../include -I../include/build_config -I../src -DHAVE_OPENGL
-LIBS   = -L.. -lSDL3_test -lSDL3 -athread=native
+CRT   ?= newlib
+CFLAGS = -mcrt=$(CRT) -gstabs -O2 -Wall -I../include -I../include/build_config -I../src -DHAVE_OPENGL
+LIBS   = -mcrt=$(CRT) -L.. -lSDL3_test -lSDL3 -athread=native
 
 SRC_FILES = $(wildcard *.c)
 DEPS = $(SRC_FILES:.c=.d)
